# serializer version: 1
# name: test_fan_device_state[tests/fixtures/fan-off.yaml]
  tuple(
    'off',
    ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Counter Fan',
      <FanEntityStateAttribute.OSCILLATING: 'oscillating'>: False,
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 1.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature.SET_SPEED|OSCILLATE|TURN_OFF|TURN_ON: 51>,
    }),
  )
# ---
# name: test_fan_device_state[tests/fixtures/fan-on.yaml]
  tuple(
    'on',
    ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Counter Fan',
      <FanEntityStateAttribute.OSCILLATING: 'oscillating'>: False,
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 100,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 1.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature.SET_SPEED|OSCILLATE|TURN_OFF|TURN_ON: 51>,
    }),
  )
# ---
# name: test_fan_device_state[tests/fixtures/fan-oscillating.yaml]
  tuple(
    'on',
    ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Counter Fan',
      <FanEntityStateAttribute.OSCILLATING: 'oscillating'>: True,
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 100,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 1.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature.SET_SPEED|OSCILLATE|TURN_OFF|TURN_ON: 51>,
    }),
  )
# ---
